Updated the arrow for the theme chooser. Added keeping the current skin in sessionStorage and reloading it on initial run. Disabled -webkit-backface-visibility: hidden; to avoid display corruption in Chrome 12. Fixed a glitch in IE6/7.
git-tfs-id: [http://tfs:8082/DefaultCollection]$/Griffin/Kendo;C489154

--- a/demos/examples/styles/examples.css
+++ b/demos/examples/styles/examples.css
@@ -89,6 +89,7 @@ body
 #exampleBody
 {
     padding: 0 1px;
+    display: none;
 }
 
 #example
@@ -179,9 +180,10 @@ pre.prettyprint
 
 .t-widget, #nav ul
 {
+    outline: none;
     -webkit-touch-callout: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-backface-visibility: hidden;
+/*    -webkit-backface-visibility: hidden;*/ /* Very broken in Chrome 12, leaves artifacts on the screen. */
 }
 
 .t-animation-container
